--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,14 +19,9 @@ a {
 
 
 .main {
-	padding: 20px 40px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: skyblue;
   
   background-attachment: fixed;
@@ -38,17 +33,23 @@ a {
 
 .nav {
 	position: fixed;
-	right: -10px;
-	height: 100%;
+	bottom: 0;
+	width: 100%;
 
+	.nav-menu::-webkit-scrollbar {
+	  display: none;
+	}
 
 	.nav-menu {
 		position: relative;
-		z-index: 100; ;
+		z-index: 100;
 		background: #091a2b;
-		margin-top: 40px;
 		display: grid;
-		height: 80%;
+		grid-template-columns: repeat(8, 1fr);
+		overflow-x: scroll;
+		place-items: center;
+		-ms-overflow-style: none;  /* IE and Edge */
+ 		 scrollbar-width: none;  /* Firefox */
 
 		.tm {
 			position: relative;
