--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,6 +32,8 @@ a {
 }
 
 .nav {
+  font-family: "Luckiest Guy", cursive;
+  -webkit-font-smoothing: antialiased;
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -50,6 +52,7 @@ a {
 		place-items: center;
 		-ms-overflow-style: none;  /* IE and Edge */
  		 scrollbar-width: none;  /* Firefox */
+     padding: 5px;
 
 
 		.tm {
@@ -63,18 +66,17 @@ a {
 		  align-items: center;
 		  transition: right .3s linear;
 		  cursor: pointer;
-		  border: 1px solid #091a2b;
+		  border: 2px solid #091a2b;
+
 
 		  &:hover {
-				border: 1px solid pink;
-			  }
+				border: 2px solid #1f2937;
+			 }
 
 		}
 
 		.current_page {
-			position: relative;
-			right: 20px;
-			border: 1px solid pink;
+			background: #1f2937;
 
 		}
 	}
@@ -103,7 +105,7 @@ a {
     -550px 0 300px 200px rgba(255, 255, 255, 0.6);
 }
 /* JUMP */
-h1 {
+.hometext {
   cursor: default;
   
   top: 0;
@@ -118,7 +120,7 @@ h1 {
   z-index: 50;
 }
 
-h1 span {
+.hometext span {
   position: relative;
   z-index: 50;
   top: 10px;
@@ -131,55 +133,55 @@ h1 span {
     0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
 }
 
-h1 span:nth-child(2) {
+.hometext span:nth-child(2) {
   -webkit-animation-delay: 0.1s;
 }
 
-h1 span:nth-child(3) {
+.hometext span:nth-child(3) {
   -webkit-animation-delay: 0.2s;
 }
 
-h1 span:nth-child(4) {
+.hometext span:nth-child(4) {
   -webkit-animation-delay: 0.3s;
 }
 
-h1 span:nth-child(5) {
+.hometext span:nth-child(5) {
   -webkit-animation-delay: 0.4s;
 }
 
-h1 span:nth-child(6) {
+.hometext span:nth-child(6) {
   -webkit-animation-delay: 0.5s;
 }
 
-h1 span:nth-child(7) {
+.hometext span:nth-child(7) {
   -webkit-animation-delay: 0.6s;
 }
 
-h1 span:nth-child(8) {
+.hometext span:nth-child(8) {
   -webkit-animation-delay: 0.2s;
 }
 
-h1 span:nth-child(9) {
+.hometext span:nth-child(9) {
   -webkit-animation-delay: 0.3s;
 }
 
-h1 span:nth-child(10) {
+.hometext span:nth-child(10) {
   -webkit-animation-delay: 0.4s;
 }
 
-h1 span:nth-child(11) {
+.hometext span:nth-child(11) {
   -webkit-animation-delay: 0.5s;
 }
 
-h1 span:nth-child(12) {
+.hometext span:nth-child(12) {
   -webkit-animation-delay: 0.6s;
 }
 
-h1 span:nth-child(13) {
+.hometext span:nth-child(13) {
   -webkit-animation-delay: 0.7s;
 }
 
-h1 span:nth-child(14) {
+.hometext span:nth-child(14) {
   -webkit-animation-delay: 0.8s;
 }
 
@@ -191,4 +193,108 @@ h1 span:nth-child(14) {
       0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
       0 50px 25px rgba(0, 0, 0, 0.2);
   }
+}
+
+
+
+.chapter  {
+
+  .content::-webkit-scrollbar {
+    display: none;
+  }
+
+  .content {
+    padding: 20px 20px 80px;
+    font-size: 12px;
+    overflow: scroll;
+      -ms-overflow-style: none;  /* IE and Edge */
+     scrollbar-width: none;  /* Firefox */
+
+    .title {
+      font-family: "Luckiest Guy", cursive;
+      color: white;
+      background: #1f2937;
+      width: fit-content;
+      padding: 10px;
+      margin-bottom: 40px;
+    }
+
+    .list-tit {
+      font-family: "Luckiest Guy", cursive;
+      width: fit-content;
+      padding: 10px;
+      margin-top: 20px;
+    }
+
+    .chap8Tit, .tour {
+      font-family: "Luckiest Guy", cursive;
+      width: fit-content;
+      padding: 10px;
+      margin: 20px auto;
+      font-size: 20px;
+    }
+
+    form {
+      width: 300px;
+      margin: 0 auto;
+      border: 1px solid #e3e3e3;
+      padding: 10px;
+
+      input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 5px;
+        border-radius: 0;
+        outline: 0;
+        border: 1px solid #e3e3e3;
+      }
+    }
+
+    .aa {
+      font-family: "Luckiest Guy", cursive;
+      width: fit-content;
+      margin-bottom: 20px;
+      font-size: 17px;
+    }
+
+
+    .dis-con {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 10px;
+      margin-bottom: 60px;
+
+      img {
+        width: 100%;
+      }
+
+      div {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .chapter {
+
+    .content {
+      .dis-con {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 10px;
+
+      img {
+        width: 100%;
+      }
+
+      div {
+        margin-bottom: 10px;
+      }
+    }
+    }
+  }
+  
 }
