--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -276,6 +276,33 @@ a {
   }
 }
 
+.chapter7 {
+  .content {
+    padding: 50px 20px 100px;
+    width: 100%;
+
+    .channel {
+      width: 100px;
+    }
+
+    table {
+      width: 100%;
+
+      td {
+        text-align: center;
+        width: 100px;
+        border: 1px solid #e3e3e3;
+        padding: 5px;
+        font-size: 12px;
+
+        img {
+          width: 100%;
+        } 
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 480px) {
   .chapter {
 
